src/assets/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;

  color-scheme: light dark;
  color: black;
  background-color: #ffffff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

.font-satisfy {
  font-family: "Satisfy", cursive;
  font-weight: 900;
  font-style: bold
}

.font-outfit {
  font-family: "Outfit", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.font-outfit-small {
  font-family: "Outfit", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: small;
}

.font-outfit-bold {
  font-family: "Outfit", sans-serif;
  font-weight: bold;
  font-style: normal;
  font-size: large;
}

.font-manrope {
  font-family: "Manrope", sans-serif;
  font-weight: 800;
  font-style: bold;
}

.font-orbitron {
  font-family: "Orbitron", sans-serif;
  font-weight: 800;
  font-style: bold;
}

.font-montserrat {
  font-family: "Orbitron", sans-serif;
  font-weight: 400;
  font-style: bold;
}

